--- a/index.html
+++ b/index.html
@@ -126,6 +126,105 @@
         ],
         netIncome: 28841.20 // Total Income - Total Operating Expenses
       },
+      balanceSheet: [
+        { category: 'Assets', amount: null },
+        { category: 'Current Assets', amount: null },
+        { category: 'Bank Accounts', amount: null },
+        { category: 'Amerant Bank - Money Market', amount: 353467.49 },
+        { category: 'BOA Checking (2758)', amount: 180512.99 },
+        { category: 'BOA Savings (4442)', amount: 2.16 },
+        { category: 'Total Bank Accounts', amount: 533982.64 },
+        { category: 'Accounts Receivable', amount: 0 },
+        { category: 'Other Current Assets', amount: null },
+        { category: 'Loans to Others', amount: 3255.75 },
+        { category: 'Loan to Shareholder', amount: 145239.29 },
+        { category: 'Total Other Current Assets', amount: 148495.04 },
+        { category: 'Total Current Assets', amount: 682477.68 },
+        { category: 'Fixed Assets', amount: null },
+        { category: 'Accumulated Depreciation', amount: -824860.22 },
+        { category: 'Building', amount: 1890672.51 },
+        { category: 'Capital Improvement', amount: 50785.02 },
+        { category: 'Furniture & Fixtures', amount: 52746.59 },
+        { category: 'Improvements', amount: 215115.68 },
+        { category: 'Office Equipment', amount: 3210.00 },
+        { category: 'Vehicles', amount: 40500.00 },
+        { category: 'Total Fixed Assets', amount: 1428169.58 },
+        { category: 'Other Assets', amount: null },
+        { category: 'Accumulated Amortization', amount: -72865.92 },
+        { category: 'Goodwill', amount: 200000.00 },
+        { category: 'Loan Costs', amount: 58452.25 },
+        { category: 'Total Other Assets', amount: 185586.33 },
+        { category: 'Total Assets', amount: 2296233.59 },
+        { category: 'Liabilities and Equity', amount: null },
+        { category: 'Liabilities', amount: null },
+        { category: 'Current Liabilities', amount: 0 },
+        { category: 'Long-term Liabilities', amount: null },
+        { category: 'EIDL Loan', amount: 143693.74 },
+        { category: 'Note Payable - Amerant Bank', amount: 1657344.65 },
+        { category: 'Total Long-term Liabilities', amount: 1801038.39 },
+        { category: 'Total Liabilities', amount: 1801038.39 },
+        { category: 'Equity', amount: null },
+        { category: 'Retained Earnings', amount: 519445.02 },
+        { category: 'Net Income', amount: 186354.88 },
+        { category: 'Additional Paid In Capital', amount: 65993.34 },
+        { category: 'Shareholder Distributions', amount: -276598.04 },
+        { category: 'Total Equity', amount: 495195.20 },
+        { category: 'Total Liabilities and Equity', amount: 2296233.59 }
+      ],
+      profitAndLoss: [
+        { category: 'Income', amount: null },
+        { category: 'FES', amount: 1411374.55 },
+        { category: 'Lunch Program Income', amount: 132163.20 },
+        { category: 'PreK - Income', amount: 265636.54 },
+        { category: 'Services', amount: 8644.50 },
+        { category: 'Tuition', amount: 2853.00 },
+        { category: 'Total Income', amount: 1820671.79 },
+        { category: 'Cost of Goods Sold', amount: 0 },
+        { category: 'Gross Profit', amount: 1820671.79 },
+        { category: 'Expenses', amount: null },
+        { category: 'Advertising & Marketing', amount: 15709.24 },
+        { category: 'Automobile Expenses', amount: 4842.00 },
+        { category: 'Background Checks', amount: 2879.51 },
+        { category: 'Bank Charges & Fees', amount: 109.40 },
+        { category: 'Charitable Contributions', amount: 5600.00 },
+        { category: 'Consultant', amount: 38735.00 },
+        { category: 'Continuing Education', amount: 7684.17 },
+        { category: 'Contractors', amount: 56557.00 },
+        { category: 'Curriculum & School Material', amount: 70487.99 },
+        { category: 'Dues & Subscriptions', amount: 2368.57 },
+        { category: 'Insurance', amount: 33637.46 },
+        { category: 'Interest Expense', amount: 105159.26 },
+        { category: 'Legal & Professional Services', amount: 40727.23 },
+        { category: 'Lunch Program Expenses', amount: 146259.55 },
+        { category: 'Meals & Entertainment', amount: 4222.29 },
+        { category: 'Office Expenses', amount: 32050.33 },
+        { category: 'Office Supply', amount: 2703.35 },
+        { category: 'Payroll Expenses', amount: 770304.85 },
+        { category: 'Postage', amount: 350.89 },
+        { category: 'Reimbursable Expenses', amount: 2600.00 },
+        { category: 'Rent & Lease', amount: 208.51 },
+        { category: 'Repairs & Maintenance', amount: 69399.11 },
+        { category: 'School Supplies', amount: 9710.47 },
+        { category: 'Shipping, Freight & Delivery', amount: 98.10 },
+        { category: 'Software', amount: 9682.10 },
+        { category: 'Taxes & Licenses', amount: 5767.95 },
+        { category: 'Telephone Expense', amount: 2876.22 },
+        { category: 'Travel', amount: 2823.87 },
+        { category: 'Uniform', amount: 11598.88 },
+        { category: 'Utilities', amount: 19424.08 },
+        { category: 'Total Expenses', amount: 1474577.38 },
+        { category: 'Net Operating Income', amount: 346094.41 },
+        { category: 'Other Income', amount: null },
+        { category: 'Interest Income', amount: 7883.38 },
+        { category: 'Loss on Disposal', amount: -31077.27 },
+        { category: 'Total Other Income', amount: -23193.89 },
+        { category: 'Other Expenses', amount: null },
+        { category: 'Amortization Expense', amount: 15322.30 },
+        { category: 'Depreciation Expense', amount: 121223.34 },
+        { category: 'Total Other Expenses', amount: 136545.64 },
+        { category: 'Net Other Income', amount: -159739.53 },
+        { category: 'Net Income', amount: 186354.88 }
+      ],
       keyMetrics: {
         netIncome: 186354.88,
         operatingCashFlow: 353977.79,
@@ -171,7 +270,7 @@
             <h1>Ryan and Selena LLC 2024 Comprehensive Financial Report</h1>
             <p>
               <br />
-              I’ve prepared this detailed financial analysis for Ryan and Selena LLC for 2024, focusing on your key concern: shareholder distributions relative to earnings. This interactive report includes breakdowns of revenue, expenses, cash flow, shareholder distributions, and a monthly budget for 2025 in a Profit and Loss format. Hover over the charts to explore the data dynamically.
+              I’ve prepared this detailed financial analysis for Ryan and Selena LLC for 2024, focusing on your key concern: shareholder distributions relative to earnings. This interactive report includes breakdowns of revenue, expenses, cash flow, shareholder distributions, and a suggested monthly budget for 2025. Hover over the charts to explore the data dynamically.
             </p>
             <div className="highlight">
               <strong>Key Insight:</strong> The company’s cash reserves dropped by 45% due to shareholder payouts exceeding free cash flow.
@@ -251,8 +350,50 @@
           </div>
 
           <div className="section">
+            <h2>2024 Financial Statements</h2>
+            <h3>Balance Sheet (As of December 31, 2024)</h3>
+            <table>
+              <thead>
+                <tr>
+                  <th>Category</th>
+                  <th>Amount</th>
+                </tr>
+              </thead>
+              <tbody>
+                {financialData.balanceSheet.map(item => (
+                  <tr key={item.category}>
+                    <td>{item.category}</td>
+                    <td className={item.amount < 0 ? 'negative' : 'positive'}>
+                      {item.amount !== null ? `$${Math.abs(item.amount).toLocaleString()}` : ''}
+                    </td>
+                  </tr>
+                ))}
+              </tbody>
+            </table>
+            <h3>Profit and Loss (January 1 - December 31, 2024)</h3>
+            <table>
+              <thead>
+                <tr>
+                  <th>Category</th>
+                  <th>Amount</th>
+                </tr>
+              </thead>
+              <tbody>
+                {financialData.profitAndLoss.map(item => (
+                  <tr key={item.category}>
+                    <td>{item.category}</td>
+                    <td className={item.amount < 0 ? 'negative' : 'positive'}>
+                      {item.amount !== null ? `$${Math.abs(item.amount).toLocaleString()}` : ''}
+                    </td>
+                  </tr>
+                ))}
+              </tbody>
+            </table>
+          </div>
+
+          <div className="section">
             <h2>Monthly Budget for 2025 (Profit and Loss Format)</h2>
-            <p>Below is the monthly budget for 2025, prepared in a Profit and Loss format based on 2024 data, assuming even distribution across the year. The monthly net income is projected at $28,841.20.</p>
+            <p>Below is a suggested monthly budget for 2025, prepared based on 2024 data, assuming even distribution across the year. The monthly net income is projected at $28,841.20.</p>
             <h3>Income</h3>
             <table>
               <thead>
@@ -302,6 +443,13 @@
                 </tr>
               </tbody>
             </table>
+          </div>
+
+          <div className="section">
+            <h2>Conclusion</h2>
+            <p>
+              Baccar, I’m committed to working with you to keep you updated on the financial health of Ryan and Selena LLC. I’m currently working on a similar report for the first quarter of 2025, and once it’s complete, I’ll send it your way. Please don’t hesitate to reach out if you’d like to discuss further—I’m here to support you.
+            </p>
           </div>
         </div>
       );
